# welly-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  todo.md
docs/: known-bugs.md
docs/superpowers/plans/: 2026-05-14-phase-1-backend-extraction.md  2026-05-17-phase-1.5-features.md
docs/superpowers/specs/: 2026-05-14-frontend-backend-separation-and-gpui-migration-design.md
scripts/: build-macos-app.sh  build-macos-dmg.sh  build-windows-zip.ps1  make-app-icons.py
src/: ansi_parser.rs  app.rs  attachment.rs  cell.rs  config.rs  main.rs  ssh.rs  terminal.rs
src/backend/: ansi_parser.rs  api.rs  cell.rs  input.rs  keys.rs  mod.rs  mouse.rs  snapshot.rs  ssh.rs  terminal.rs
src/ui/: mod.rs
src/ui/egui/: fonts.rs  input.rs  mod.rs  render.rs  selection.rs
