[package]
name = "welly-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["default"] }
russh = "0.60"
tokio = { version = "1", features = ["full"] }
encoding = "0.2"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
bytes = "1"
dirs = "6.0.0"
crossbeam-channel = "0.5.15"
encoding_rs = "0.8.35"
unicode-width = "0.1"
fontdb = "0.23.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
winresource = "0.1.31"
